[app] Wrap buttons text and icon in a span (Firefox bug, see: http://stackoverflow.com/questions/30979265/)

--- a/components/lie-item/lie-item.scss
+++ b/components/lie-item/lie-item.scss
@@ -99,6 +99,7 @@
 
     &-picture {
         position: relative;
+        display: block;
         height: 100%;
         width: 100%;
         object-fit: cover;
@@ -106,11 +107,13 @@
         border-top-left-radius: 4px;
         border-top-right-radius: 4px;
 
-        &:not([src]) {
+        &:not([src]),
+        &[src=""] {
             height: calc(100% + 2px);
             width: calc(100% + 2px);
             max-width: calc(100% + 2px);
             margin: -1px;
+            font-size: 0;
         }
 
         &::before {
